# ChangeLog for app-misc/pysvn-workbench
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  31 Mar 2011; Justin Lecher <jlec@gentoo.org> pysvn-workbench-1.6.2.ebuild:
  Fixed up ebuild
