@@ -1,20 +1,25 @@
-# Copyright 1999-2011 Gentoo Foundation
+# Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
-inherit eutils python
+EAPI=5
+
+PYTHON_COMPAT=( python{2_6,2_7} )
+
+inherit eutils python-single-r1
 
 DESCRIPTION="PySVN Workbench GUI"
 HOMEPAGE="http://pysvn.tigris.org/"
 SRC_URI="http://pysvn.barrys-emacs.org/source_kits/WorkBench-${PV}.tar.gz"
 
-LICENSE="Apache-1.1"
-
 SLOT="0"
+LICENSE="Apache-1.1"
 KEYWORDS="~x86 amd64"
-
 IUSE=""
-DEPEND=">=dev-lang/python-2.4 dev-python/pysvn >=dev-python/wxpython-2.6.10"
+
+REQUIRED_USE="${PYTHON_REQUIRED_USE}"
+
+DEPEND="${PYTHON_DEPS}"
 RDEPEND="${DEPEND}"
 
 S="${WORKDIR}/WorkBench-${PV}"
@@ -24,8 +29,8 @@ src_install() {
 	doins -r "${S}"/Source/*
 
 	cat >> "${T}"/pysvn-workbench <<- EOF
-#!/bin/bash
-python -O $(python_get_sitedir)/${PN}/wb_main.py
-EOF
+	#!/bin/bash
+	${EPYTHON} -O $(python_get_sitedir)/${PN}/wb_main.py
+	EOF
 	dobin "${T}"/pysvn-workbench
 }
