@@ -1,6 +1,10 @@
 # ChangeLog for app-misc/pysvn-workbench
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  11 Jun 2013; Justin Lecher <jlec@gentoo.org> pysvn-workbench-1.6.2.ebuild,
+  metadata.xml:
+  Bump to EAPI=5 and python-single-r1.eclass
 
   31 Mar 2011; Justin Lecher <jlec@gentoo.org> pysvn-workbench-1.6.2.ebuild:
   Fixed up ebuild
